Fix spacing for personal info div

--- a/src/App.css
+++ b/src/App.css
@@ -10,15 +10,20 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 40%;
-  height: 90%;
+  max-width: 500px;
+  min-width: 100px;
+  width: 100%;
+  height: 100%;
   background-color: #d4d6db;
   border-radius: 24px;
 }
 
 .resume-section {
-  width: 50%;
-  height: 800px;
+  min-width: 600px;
+  width: 90%;
+  height: 100%;
+  height: 600px;
   background-color: #f3f4f6;
   border-radius: 24px;
+  margin-left: 10px;
 }
