--- a/src/components/PersonalInformation.css
+++ b/src/components/PersonalInformation.css
@@ -3,19 +3,15 @@
 } */
 
 .personal-info-header {
-	left: 0;
-	margin-bottom: -5px;
-	margin-top: -5px;
-	width: 80%;
 	font-size: 1.8rem;
+	font-weight: 900;
 }
 
 .personal-info-container {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	height: 100%;
-	width: 95%;
+	width: 98%;
 	background-color: #d4d6db;
 	color: black;
 	margin: 20px 0;
@@ -24,7 +20,7 @@
 
 .personal-info-container span {
 	display: flex;
-	width: 90%;
+	width: 100%;
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
@@ -33,7 +29,7 @@
 }
 
 .personal-info-container div {
-	width: 90%;
+	width: 100%;
 }
 
 input {
